# kafka

./: .gitignore  README.md
kafka_basic_nextjs/: Readme_nextjs.md  admin.js  client.js  consumer.js  package-lock.json  producer.js
kafka_python_gcp/: Dockerfile.kafka-producer  Readme_python.md  docker-compose.kafka.yml  kafka_bq_consumer.py  kafka_producer.py  pyproject.toml  setup_kafka_bastion.sh  setup_managed_kafka.sh  test_managed_kafka.py
kafka_python_gcp/scripts/: setup_kafka_bastion.sh  setup_managed_kafka.sh  test_managed_kafka.py
kafka_python_gcp/src/: kafka_bq_consumer.py  kafka_producer.py
